# console-chat-with-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  project-rules.txt  pyproject.toml  requirements-dev.txt
src/: chatbot.py
tests/: test_chatbot.py
